--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scorpii Games</title>
+    
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="Scorpii Games" />
+    <meta property="og:description" content="We create thrilling and engaging mobile games. Play our latest: Screw & Rush!" />
+    <meta property="og:url" content="https://yourusername.github.io/" />
+    <meta property="og:image" content="https://yourusername.github.io/assets/screw-and-rush-banner.png" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card (optional but recommended) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Scorpii Games" />
+    <meta name="twitter:description" content="Play Screw & Rush – our latest mobile game now on Google Play!" />
+    <meta name="twitter:image" content="https://yourusername.github.io/assets/screw-and-rush-banner.png" />
+
     <style>
         body {
             margin: 0;
@@ -17,17 +31,21 @@
             min-height: 100vh;
             text-align: center;
         }
+
         header {
             padding: 2rem;
         }
+
         h1 {
             font-size: 3rem;
             color: #f39c12;
         }
+
         p {
             font-size: 1.2rem;
             margin-top: 0.5rem;
         }
+
         .button {
             margin-top: 2rem;
             padding: 1rem 2rem;
@@ -40,9 +58,11 @@
             text-decoration: none;
             transition: background-color 0.3s;
         }
+
         .button:hover {
             background-color: #d35400;
         }
+
         footer {
             margin-top: 4rem;
             font-size: 0.9rem;
